Cell overlapping issue fixed

--- a/components/recon-grid/recon-grid.less
+++ b/components/recon-grid/recon-grid.less
@@ -15,7 +15,7 @@ rn-recon-grid {
   table {
     /* You have to specify widths */
     width: 100%;
-    min-width:1750px;
+    min-width:1950px;
 
     thead, tbody,tfoot {
       display: block;
@@ -95,7 +95,7 @@ rn-recon-grid {
       &.unMatchedAmt { .flex-grow(1); .flex-basis(80px); }
       &.badLines {  .flex-basis(80px); }
       &.ingstdDate {  .flex-basis(95px); }
-      &.invFileName { .flex-grow(2); .flex-basis(400px); }
+      &.invFileName { .flex-grow(2); .flex-basis(540px); }
       &.status {  .flex-basis(120px); }
     }
 
